<resources>
    <string name="app_name">Colors</string>
    <string name="lbl_red">Red</string>
    <string name="lbl_green">Green</string>
    <string name="lbl_blue">Blue</string>
    <string name="lbl_alpha">Alpha</string>
    <!--Options Menu labels/options -->
    <string name="lblOpTransparent">Transparent</string>
    <string name="lblOpSemitransparent">Semitransparent</string>
    <string name="lblOpOpaque">Opaque</string>
    <string name="lblOpBlack">Black</string>
    <string name="lblOpWhite">White</string>
    <string name="lblOpRed">Red</string>
    <string name="lblOpGreen">Green</string>
    <string name="lblOpBlue">Blue</string>
    <string name="lblOpCyan">Cyan</string>
    <string name="lblOpMagenta">Magenta</string>
    <string name="lblOpYellow">Yellow</string>
    <string name="lblOpReset">Reset</string>
    <string name="lblOpAboutof">About of</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_full_name">Full name :</string>
    <string name="lbl_my_name">Santiago Perez</string>
    <string name="lbl_github">GitHub :</string>
    <string name="lbl_my_github">/santiago3028</string>
    <string name="lbl_help">HELP</string>
    <string name="lbl_my_des">

        The application allows you to make certain color modifications
        to a predetermined image, there are a variety of colors that we can use and give our
        image its unique taste, its function is very easy to use, simply slide the bar that is in front of the color,
        a slow movement is made until the desired shade is reached, the colors that are in the palette can be combined
        without any problem and ease. Do the test!

    </string>

</resources>
