<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutofActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1503A9F4"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="#5C0BBD66"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagenview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="54dp"
            android:layout_margin="12dp"
            android:background="#5C0BBD66"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="383dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lbl_full_name"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="409dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:text="@string/lbl_my_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="347dp"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            android:background="#5C0BBD66"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="405dp"
                android:layout_height="63dp"
                android:layout_weight="1"
                android:background="#002979FF"
                android:text="@string/lbl_github"
                android:textColor="#070606"
                android:textSize="30sp" />

            <TextView
                android:layout_width="493dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:text="@string/lbl_my_github" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>